ui: correctly preserve whitespace on settings descriptions (#2713)

--- a/ui/src/core_plugins/settings_page/styles.scss
+++ b/ui/src/core_plugins/settings_page/styles.scss
@@ -34,6 +34,7 @@
 
   &__description {
     font-size: smaller;
+    white-space: pre-line;
   }
 
   &__controls {
